# pizhi

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README-package.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
agents/pizhi/: AGENTS.md
docs/architecture/: ARCHITECTURE.md
docs/guides/: getting-started.md  recovery.md
docs/verification/: 2026-04-22-e2e-claude-opencode-summary.md  2026-04-22-e2e-claude-opencode-validation-design.md  2026-04-22-e2e-claude-opencode-validation-plan.md  2026-04-22-e2e-stage-1-smoke.md  2026-04-22-e2e-stage-2-endurance.md  2026-04-22-e2e-stage-3-full-run.md  2026-04-23-e2e-stage-2-endurance.md  2026-04-24-e2e-stage-2-endurance.md
docs/zh/: README.md
meta/plans/: 2026-04-15-pizhi-milestone-1-bootstrap.md  2026-04-16-pizhi-milestone-2-engine.md  2026-04-16-pizhi-milestone-3-orchestration.md  2026-04-16-pizhi-milestone-4-maintenance.md  2026-04-18-pizhi-milestone-5-maintenance-closure.md  2026-04-19-pizhi-milestone-6-provider-first.md  2026-04-19-pizhi-milestone-7-provider-orchestration.md  2026-04-19-pizhi-milestone-8-ai-review.md  2026-04-20-pizhi-milestone-10-delivery-and-extension.md  2026-04-20-pizhi-milestone-9-v1-closure.md  2026-04-20-pizhi-open-source-repo-organization.md  2026-04-21-pizhi-agent-playbook-delivery.md  2026-04-21-pizhi-milestone-11-agent-backend.md  2026-04-21-pizhi-uv-git-distribution.md
meta/specs/: 2026-04-15-pizhi-core-design.md  (+7 more)
src/pizhi/: cli.py
tests/: conftest.py
(+154 files in other folders)
