[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pizhi"
version = "0.1.2"
description = "AI-assisted long-form novel writing CLI"
readme = "README-package.md"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0.0"]

[project.optional-dependencies]
dev = ["pytest>=9.0.0"]

[project.scripts]
pizhi = "pizhi.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
